# pitcher

./: .gitignore  pyproject.toml
pitcher/: __main__.py  bot.py  settings.py
pitcher/exts/: pitcher.py  ready_message.py  status.py
