[tool.poetry]
name = "pitcher"
version = "0.1.0"
description = "Pitch up/down YouTube videos"
authors = ["interrrp"]
license = "MIT"
readme = "README.md"

[tool.poetry.scripts]
pitcher = "pitcher.__main__:main"

[tool.poetry.dependencies]
python = "^3.11"
disnake = "^2.8.1"
pydantic = {extras = ["dotenv"], version = "^1.10.7"}
pytube = "^12.1.3"
pydub = "^0.25.1"
rich = "^13.3.4"

[tool.poetry.group.dev.dependencies]
mypy = "^1.2.0"
ruff = "^0.0.262"
black = "^23.3.0"

[tool.ruff]
line-length = 120

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
